--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 header
 {
-    background-image: url(background.jpg);
+    /*background-image: url(background.jpg);*/
     height:100vh;
     background-size: cover;
     background-position: center;       
@@ -19,6 +19,7 @@ header
 .main-nav li
 {
     display: inline-block;
+    box-sizing: border-box;
 }
 .main-nav li a
 {
@@ -27,6 +28,7 @@ header
     padding: 5px 20px;
     font-family: "Roboto",sans-serif;
     font-size: 15px;
+    box-sizing: border-box;
 }
 .main-nav li.active a
 {
@@ -80,11 +82,94 @@ h1
     
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
     header {
         background-color: lightcoral;
     }
+    
+    header h1 {
+        font-size: 30px;
+    }
+    
+    .main-nav{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .main-nav>li {
+        box-sizing: border-box;
+        padding: 5px;
+    }
+    
+    .main-nav>li>a {
+        display: block;
+        padding: 10px;
+    }
+    
+    .text{
+        width: 5;
+        height: 50%;
+    }
+    
+    .button {
+        margin: 5px 0;
+        position: relative;
+    }
+    
+    .btn {
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 75%;
+    }
 }
+
+@media only screen and (min-width: 700px) {
+    header {
+        background-color: lightblue;
+    }
+    
+    header h1 {
+        font-size: 50px;
+    }
+    
+    .main-nav{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .main-nav li {
+        box-sizing: border-box;
+        padding: 5px;
+    }
+    
+    .main-nav li a {
+        display: block;
+        padding: 10px;
+    }
+    
+    .text{
+        width: 100%;
+        height: 50%;
+    }
+    
+    .button {
+        margin: 5px 0;
+        position: relative;
+    }
+    
+    .btn {
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 75%;
+    }
+}
+
 
 
 
