--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 header
 {
-    /*background-image: url(background.jpg);*/
+    background-image: url(background.jpg);
     height:100vh;
     background-size: cover;
     background-position: center;       
